--- a/EA-Angular/src/app/components/footer/footer-two/footer-two.component.css
+++ b/EA-Angular/src/app/components/footer/footer-two/footer-two.component.css
@@ -114,6 +114,9 @@
   .scd-ftr-links {
     width: 90%;
     margin-left: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 
@@ -122,5 +125,9 @@
     flex-direction: column;
     align-items: flex-start;
     white-space: normal;
+  }
+  a {
+    white-space: normal;
+    word-break: break-all;
   }
 }
